windows Form 오류 수정중

--- a/WebLog/PopupAgent/PopupAgent.csproj
+++ b/WebLog/PopupAgent/PopupAgent.csproj
@@ -103,6 +103,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommunicationManager.cs" />
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="PopupForm.cs">
       <SubType>Form</SubType>
